--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git course</title>
 </head>
 <body>
-    <h1>EEEEE Giiiiiiiiit</h1>
+    <h1>EEEEE asdfasdfasdf</h1>
     <a>dfgdfg</a>
 </body>
 </html>
